Fixed Input Bar Width

--- a/todo.css
+++ b/todo.css
@@ -85,7 +85,7 @@ div #input{
     font-size:20px;
     height: 30px;
     text-align: center;
-    width:auto;
+    width:220px;
     overflow:hidden;
     
 }
